update the notebooks for consistency in flow and grammar

--- a/tutorials/klusterai-api/keyword-extraction-api.ipynb
+++ b/tutorials/klusterai-api/keyword-extraction-api.ipynb
@@ -25,13 +25,20 @@
     "id": "6d1d06ea-79c1-4f28-b312-0e5aabe18ff3"
    },
    "source": [
-    "Welcome to the keyword extraction notebook powered by the <a href=\"https://kluster.ai/\" target=\"_blank\">kluster.ai</a> Batch API!\n",
+    "In this notebook, we'll demonstrate how to leverage the <a href= \"https://kluster.ai/\" target=\"_blank\">kluster.ai</a> Batch API and the Llama 70B Large Language Model (LLM) to identify keywords in a given dataset. Using an extract from the AG News dataset as an example, we'll show you how to extract keywords from the dataset. You can easily modify this example for your own use case and data format. Our solution efficiently processes text of any size, small text samples to enterprise-scale datasets."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "112d41e9",
+   "metadata": {},
+   "source": [
+    "## Prerequisites\n",
     "\n",
-    "In this notebook, we’ll demonstrate how to leverage the kluster.ai Batch API and the Llama 70B Large Language Model (LLM) to identify keywords in a given dataset. By using an extract from the AG News dataset as an example, we’ll show you how to extract keywords from the dataset. You can easily modify this example for your own use case and data format. Our solution efficiently processes text of any size, small text samples to enterprise-scale datasets.\n",
+    "Before getting started, ensure you have the following:\n",
     "\n",
-    "To get started, simply input your API key and execute the preloaded cells to perform the keyword extraction. If you don’t have an API key, you can register for free <a href=\"https://platform.kluster.ai/signup\" target=\"_blank\">on our platform</a>.\n",
-    "\n",
-    "Let’s dive in!"
+    "- **A kluster.ai account** - sign up on the <a href=\"https://platform.kluster.ai/signup\" target=\"_blank\">kluster.ai platform</a> if you don't have one\n",
+    "- **A kluster.ai API key** - after signing in, go to the <a href=\"https://platform.kluster.ai/apikeys\" target=\"_blank\">**API Keys**</a> section and create a new key. For detailed instructions, check out the <a href=\"https://docs.kluster.ai/get-started/get-api-key/\" target=\"_blank\">Get an API key</a> guide"
    ]
   },
   {
@@ -49,7 +56,7 @@
    "id": "b8d580f8-67d5-45d6-915f-0f6b60d3b543",
    "metadata": {},
    "source": [
-    "Input your unique kluster.ai API key. If you haven’t obtained one yet, don’t forget to <a href=\"https://platform.kluster.ai/signup\" target=\"_blank\">sign up</a>."
+    "In this notebook, we'll use Python's `getpass` module to safely input the key. Provide your unique kluster.ai API key (ensure there are no spaces)."
    ]
   },
   {
@@ -164,7 +171,7 @@
     "id": "OyGuHllZllct"
    },
    "source": [
-    "## Batch inference"
+    "## Perform Batch inference"
    ]
   },
   {
@@ -175,11 +182,12 @@
    },
    "source": [
     "To run the inference job, we’ll follow three simple steps:\n",
-    "1. **Create the batch input file -** we’ll create a file containing the requests to be processed by the model.\n",
-    "2. **Upload the batch input file to kluster.ai -** once the file is ready, we’ll upload it to the kluster.ai platform using the API, where it will be queued for processing.\n",
-    "3. **Start the job -** after the upload, we’ll trigger the job to process the data.\n",
     "\n",
-    "Everything is preconfigured for you—just execute the cells below to see it all in action!"
+    "1. **Create the Batch input file -** we’ll create a file containing the requests to be processed by the model\n",
+    "2. **Upload the Batch input file to kluster.ai -** once the file is ready, we’ll upload it to the kluster.ai platform using the API, where it will be queued for processing\n",
+    "3. **Start the job -** after the upload, we’ll trigger the job to process the data\n",
+    "\n",
+    "Everything is preconfigured for you—just execute the cells below to see it all in action."
    ]
   },
   {
@@ -363,7 +371,7 @@
     "id": "iFrDrriQqizC"
    },
    "source": [
-    "In the following section, we’ll monitor the status of each job to see how they’re progressing. Let’s take a look and keep track of their completion."
+    "In the following section, we'll monitor each job's status to see their progress. Let's review it and keep track of its completion."
    ]
   },
   {
@@ -438,7 +446,7 @@
    "id": "12c1f6ac-8d60-4158-9036-de79fa274983",
    "metadata": {},
    "source": [
-    "Now that the job is complete, we’ll fetch the results and examine the responses generated for each request."
+    "Now that the job is complete, we'll fetch the results and examine the responses generated for each request."
    ]
   },
   {
@@ -534,7 +542,7 @@
    "id": "7d195dd1-1293-4407-b6ad-cab7e77b14c0",
    "metadata": {},
    "source": [
-    "Congratulations! You’ve successfully completed the keyword extraction task using the kluster.ai Batch API. This demonstration highlights how you can effortlessly manage large datasets and extract meaningful insights from them. With the Batch API, you can scale your workflows smoothly, making it an essential tool for processing large-scale datasets."
+    "Congratulations! You’ve successfully completed the keyword extraction task using the kluster.ai Batch API. This demonstration highlights how you can effortlessly manage large datasets and extract meaningful insights. With the Batch API, you can scale your workflows smoothly, making it an essential tool for processing large-scale datasets."
    ]
   }
  ],
