--- a/tutorials/klusterai-api/multiple-tasks-batch-api.ipynb
+++ b/tutorials/klusterai-api/multiple-tasks-batch-api.ipynb
@@ -7,7 +7,7 @@
     "id": "be189fde-4e5b-4f80-bae1-ded86a5075a7"
    },
    "source": [
-    "# Quick start: multiple inference requests with kluster.ai"
+    "# Multiple inference requests with kluster.ai"
    ]
   },
   {
@@ -25,14 +25,31 @@
     "id": "6d1d06ea-79c1-4f28-b312-0e5aabe18ff3"
    },
    "source": [
-    "This tutorial runs through a Colab Notebook where you'll learn how to use the <a href=\"https://kluster.ai/\" target=\"_blank\">kluster.ai</a> Batch API to extract insights from large volumes of text data. By the end of this guide, you'll be able to summarize a dataset, generate keywords, translate text to another language (in this case, English to Spanish), classify the text, and extract the relevant keywords* all without writing a single line of code. Whether you're familiar with LLMs or just getting started, this guide is designed to get you up and running in minutes.\n",
+    "This tutorial runs through a Colab Notebook where you'll learn how to use the <a href=\"https://kluster.ai/\" target=\"_blank\">kluster.ai</a> Batch API to extract insights from large volumes of text data. By the end of this guide, you'll be able to summarize a dataset, generate keywords, translate text to another language (in this case, English to Spanish), classify the text, and extract the relevant keywords all without writing a single line of code. Whether you're familiar with LLMs or just getting started, this guide is designed to get you up and running in minutes.\n",
     "\n",
     "In this guide, you'll follow just two simple steps:\n",
     "\n",
-    "1.\t**Select a Dataset -** we offer three different datasets. You can select one from the provided options to get started, but feel free to bring your own dataset.\n",
-    "2.\t**Run Configurations and Predictions -** all configuration settings are already defined. After selecting the dataset, you can proceed by simply running the provided cells, which will handle all configurations and execute inference requests for you.\n",
+    "1.  **Select a dataset** - we offer three different datasets. To get started, you can select one from the provided options, but feel free to bring your own dataset\n",
+    "2.  **Run configurations and predictions** - all configuration settings are already defined. After selecting the dataset, you can run the provided cells, which will handle all configurations and execute inference requests for you"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "861366d9",
+   "metadata": {},
+   "source": [
+    "## Prerequisites"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8b6c9189",
+   "metadata": {},
+   "source": [
+    "Before getting started, ensure you have the following:\n",
     "\n",
-    "Simply provide your API key and run the preloaded cells to perform the classification. If you don’t have an API key, you can sign up for free <a href=\"https://platform.kluster.ai/signup\" target=\"_blank\">on our platform</a>."
+    "- **A kluster.ai account** - sign up on the <a href=\"https://platform.kluster.ai/signup\" target=\"_blank\">kluster.ai platform</a> if you don't have one\n",
+    "- **A kluster.ai API key** - after signing in, go to the <a href=\"https://platform.kluster.ai/apikeys\" target=\"_blank\">**API Keys**</a> section and create a new key. For detailed instructions, check out the <a href=\"https://docs.kluster.ai/get-started/get-api-key/\" target=\"_blank\">Get an API key</a> guide"
    ]
   },
   {
@@ -42,7 +59,7 @@
     "id": "xU1WBQJ7Uh09"
    },
    "source": [
-    "## Config"
+    "## Setup"
    ]
   },
   {
@@ -50,7 +67,7 @@
    "id": "0fd97579",
    "metadata": {},
    "source": [
-    "Enter your personal kluster.ai API key (make sure it has no blank spaces). Remember to <a href=\"https://platform.kluster.ai/signup\" target=\"_blank\">sign up</a> if you don't have one yet."
+    "In this notebook, we'll use Python's `getpass` module to safely input the key. Provide your unique kluster.ai API key (ensure there are no spaces)."
    ]
   },
   {
@@ -70,16 +87,6 @@
    "source": [
     "from getpass import getpass\n",
     "api_key = getpass(\"Enter your kluster.ai API key: \")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "650e5559-69c7-4274-8700-a7d94791e9db",
-   "metadata": {
-    "id": "650e5559-69c7-4274-8700-a7d94791e9db"
-   },
-   "source": [
-    "##Setup"
    ]
   },
   {
@@ -150,7 +157,7 @@
     "id": "QjCVfg65jKz6"
    },
    "source": [
-    "In this section, you can choose from three different datasets to work with. Simply select the URL corresponding to the dataset you want, and the notebook will automatically fetch it for you. No extra steps are needed!"
+    "In this section, you can choose from three different datasets. Simply select the URL corresponding to the dataset you want, and the notebook will automatically fetch it for you. No extra steps are needed."
    ]
   },
   {
@@ -310,13 +317,13 @@
    },
    "source": [
     "In this section, we’ve predefined five requests for the model to execute based on common customer use cases:\n",
-    "1.\tSentiment Analysis\n",
+    "1.\tSentiment analysis\n",
     "2.\tTranslation\n",
     "3.\tSummarization\n",
-    "4.\tTopic Classification\n",
-    "5.\tKeyword Extraction\n",
+    "4.\tTopic classification\n",
+    "5.\tKeyword extraction\n",
     "\n",
-    "If you’re happy with these requests, you can simply run the code as-is. However, if you’d like to customize the requests, then feel free to modify the prompts (or add new ones) to make personal requests."
+    "If you’re happy with these requests, you can simply run the code as-is. However, if you’d like to customize them, feel free to modify the prompts (or add new ones) to make personal requests."
    ]
   },
   {
@@ -375,7 +382,7 @@
     "id": "OyGuHllZllct"
    },
    "source": [
-    "## Batch inference"
+    "## Perform Batch inference"
    ]
   },
   {
@@ -385,14 +392,15 @@
     "id": "6-MZlfXAoiNv"
    },
    "source": [
-    "Now we’re diving into the main event of this notebook: running inference requests! This is the core purpose of the tool, and it’s where the magic happens.\n",
+    "Now, we're diving into this notebook's main event: running inference requests. This is the tool's core purpose, where the magic happens.\n",
     "\n",
-    "To execute the request, we’ll follow three straightforward steps:\n",
-    "1. **Create the Batch input file** - we’ll generate a file with the desired requests to be processed by the model\n",
-    "2. **Upload the Batch input file to kluster.ai** - once the file is ready, we’ll upload it to the <a href=\"https://platform.kluster.ai/\" target=\"_blank\">kluster.ai platform</a> using the API, where it will be queued for processing\n",
-    "3. **Start the job** - after the file is uploaded, we’ll initiate the job to process the uploaded data\n",
+    "To execute the request, we'll follow three straightforward steps:\n",
     "\n",
-    "Everything is set up for you – just run the cells below to watch it all come together!"
+    "1. **Create the Batch input file** - we'll generate a file with the desired requests to be processed by the model\n",
+    "2. **Upload the Batch input file to kluster.ai** - once the file is ready, we'll upload it to the <a href=\"https://platform.kluster.ai/\" target=\"_blank\">kluster.ai platform</a> using the API, where it will be queued for processing\n",
+    "3. **Start the job** - after the file is uploaded, we'll initiate the job to process the uploaded data\n",
+    "\n",
+    "Everything is set up for you – just run the cells below to watch it all come together."
    ]
   },
   {
@@ -412,7 +420,7 @@
     "id": "qS4JXT52wGJ-"
    },
    "source": [
-    "This example selects the `klusterai/Meta-Llama-3.1-405B-Instruct-Turbo` model. If you'd like to use a different model feel free to change the model's name in the following cell. Please refer to our <a href=\"https://docs.kluster.ai/getting-started/#list-supported-models\" target=\"_blank\">documentation</a> for a list of the models we support."
+    "This example selects the `klusterai/Meta-Llama-3.1-405B-Instruct-Turbo` model. If you'd like to use a different model, feel free to change the model's name in the following cell. Please refer to our <a href=\"https://docs.kluster.ai/getting-started/#list-supported-models\" target=\"_blank\">documentation</a> for a list of the models we support."
    ]
   },
   {
@@ -477,6 +485,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6b3ed12b",
+   "metadata": {},
+   "source": [
+    "With our input file ready, the next step is to upload it to the kluster.ai platform."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "l5eu5UyAnEtk",
@@ -530,7 +546,7 @@
    "id": "ca918c23",
    "metadata": {},
    "source": [
-    "All requests are now being processed!"
+    "All requests are now being processed."
    ]
   },
   {
@@ -550,7 +566,7 @@
     "id": "iFrDrriQqizC"
    },
    "source": [
-    "In the following section, we’ll monitor the status of each job to see how they’re progressing. Let’s take a look and keep track of their completion."
+    "In the following section, we'll monitor each job's status to see how it's progressing. Let's review it and keep track of its completion."
    ]
   },
   {
@@ -656,6 +672,14 @@
    },
    "source": [
     "## Get the results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d1d9215f",
+   "metadata": {},
+   "source": [
+    "Now that the job is complete, we'll fetch the results and examine the responses generated for each request."
    ]
   },
   {
@@ -987,12 +1011,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "tu2R8dGYimKc",
+   "cell_type": "markdown",
+   "id": "e9573d9e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Conclusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d42bcd40",
+   "metadata": {},
+   "source": [
+    "You've successfully completed the multiple tasks request using the kluster.ai Batch API! This guide demonstrated how to extract valuable insights from large text datasets, such as sentiment analysis, translation, summarization, topic classification, and keyword extraction."
+   ]
   }
  ],
  "metadata": {
