--- a/tutorials/klusterai-api/sentiment-analysis-api.ipynb
+++ b/tutorials/klusterai-api/sentiment-analysis-api.ipynb
@@ -25,11 +25,26 @@
     "id": "6d1d06ea-79c1-4f28-b312-0e5aabe18ff3"
    },
    "source": [
-    "Welcome to the sentiment analysis notebook using the <a href=\"https://kluster.ai/\" target=\"_blank\">kluster.ai</a> Batch API!\n",
+    "This tutorial runs through a Colab Notebook where you'll learn how to use the <a href=\"https://kluster.ai/\" target=\"_blank\">kluster.ai</a> Batch API to perform sentiment analysis on text data. For illustration, we'll use a sample from the Amazon musical instrument reviews dataset to determine the sentiment of each review. You can easily customize this example to work with your own data and specific use cases. This technique allows for efficient processing of small or large datasets, with results neatly categorized using a cutting-edge language model."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "41ea62a1",
+   "metadata": {},
+   "source": [
+    "## Prerequisites"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "83111fd4",
+   "metadata": {},
+   "source": [
+    "Before getting started, ensure you have the following:\n",
     "\n",
-    "In this notebook, we’ll guide you through how to apply the kluster.ai Batch API to perform sentiment analysis on text data. For illustration, we’ll use a sample from the Amazon musical instrument reviews dataset to determine the sentiment of each review. You can easily customize this example to work with your own data and specific use case. This technique allows for efficient processing of datasets, whether small or large, with results neatly categorized using a cutting-edge language model.\n",
-    "\n",
-    "To begin, just enter your API key and run the preloaded cells to perform the sentiment analysis. If you don’t have an API key, you can sign up for free <a href=\"https://platform.kluster.ai/signup\" target=\"_blank\">on our platform</a>."
+    "- **A kluster.ai account** - sign up on the <a href=\"https://platform.kluster.ai/signup\" target=\"_blank\">kluster.ai platform</a> if you don't have one\n",
+    "- **A kluster.ai API key** - after signing in, go to the <a href=\"https://platform.kluster.ai/apikeys\" target=\"_blank\">**API Keys**</a> section and create a new key. For detailed instructions, check out the <a href=\"https://docs.kluster.ai/get-started/get-api-key/\" target=\"_blank\">Get an API key</a> guide"
    ]
   },
   {
@@ -47,7 +62,7 @@
    "id": "b8d580f8-67d5-45d6-915f-0f6b60d3b543",
    "metadata": {},
    "source": [
-    "Provide your unique kluster.ai API key (ensure there are no spaces). If you don’t have one yet, don’t forget to <a href=\"https://platform.kluster.ai/signup\" target=\"_blank\">sign up</a>."
+    "In this notebook, we'll use Python's `getpass` module to safely input the key. Provide your unique kluster.ai API key (ensure there are no spaces)."
    ]
   },
   {
@@ -134,7 +149,7 @@
     "id": "QjCVfg65jKz6"
    },
    "source": [
-    "We’ve preloaded a sample dataset for you, sourced from Amazon’s reviews of musical instruments. This dataset contains customer feedback on various music-related products, ready for you to analyze. No further setup is required—just jump into the next steps to start working with the data."
+    "We've preloaded a sample dataset sourced from Amazon's reviews of musical instruments. This dataset contains customer feedback on various music-related products, ready for you to analyze. No further setup is required—just jump into the next steps to start working with the data."
    ]
   },
   {
@@ -162,7 +177,7 @@
     "id": "OyGuHllZllct"
    },
    "source": [
-    "## Batch inference"
+    "## Perform Batch inference"
    ]
   },
   {
@@ -172,12 +187,13 @@
     "id": "6-MZlfXAoiNv"
    },
    "source": [
-    "To run the inference job, we’ll follow three simple steps:\n",
-    "1. **Create the batch input file -** we’ll create a file containing the requests to be processed by the model\n",
-    "2. **Upload the batch input file to kluster.ai -** once the file is ready, we’ll upload it to the kluster.ai platform using the API, where it will be queued for processing\n",
-    "3. **Start the job -** after the upload, we’ll trigger the job to process the data\n",
+    "To run the inference job, we'll follow three simple steps:\n",
     "\n",
-    "Everything has already been set up for you—simply run the cells below and watch it work!"
+    "1. **Create the Batch input file** - we'll create a file containing the requests to be processed by the model\n",
+    "2. **Upload the Batch input file to kluster.ai** - once the file is ready, we'll upload it to the kluster.ai platform using the API, where it will be queued for processing\n",
+    "3. **Start the job** - after the upload, we'll trigger the job to process the data\n",
+    "\n",
+    "Everything has already been set up for you—simply run the cells below and watch it work."
    ]
   },
   {
@@ -197,7 +213,7 @@
     "id": "qS4JXT52wGJ-"
    },
    "source": [
-    "In this example, we are using the `klusterai/Meta-Llama-3.3-70B-Instruct-Turbo` model. If you’d like to switch to another model, feel free to change the model name in the next cell. For a complete list of available models, please refer to our <a href=\"https://docs.kluster.ai/getting-started/#list-supported-models\" target=\"_blank\">documentation</a>."
+    "In this example, we use the `klusterai/Meta-Llama-3.3-70B-Instruct-Turbo` model. If you'd like to switch to another model, feel free to change the model name in the next cell. For a complete list of available models, please refer to our <a href= \"https://docs.kluster.ai/getting-started/#list-supported-models\" target= \"_blank\">documentation</a>."
    ]
   },
   {
@@ -252,7 +268,7 @@
    "id": "ada26fe3-acb9-48dc-b368-b57fc380cdb8",
    "metadata": {},
    "source": [
-    "Let’s preview what that request file looks like:"
+    "Let's preview what that request file looks like:"
    ]
   },
   {
@@ -319,7 +335,7 @@
    "id": "251a0b89-71a9-40d7-bf14-51be935afe10",
    "metadata": {},
    "source": [
-    "Once the file has been successfully uploaded, we’re ready to start the inference job."
+    "Once the file has been successfully uploaded, we're ready to start the inference job."
    ]
   },
   {
@@ -341,7 +357,7 @@
    "id": "406e7a44",
    "metadata": {},
    "source": [
-    "All requests are currently being processed!"
+    "All requests are currently being processed."
    ]
   },
   {
@@ -361,7 +377,7 @@
     "id": "iFrDrriQqizC"
    },
    "source": [
-    "In the next section, we’ll track the status of the job to monitor its progress. Let’s check in and follow its completion."
+    "In the next section, we'll track the job's status to monitor its progress. Let's check in and follow its completion."
    ]
   },
   {
@@ -436,7 +452,7 @@
    "id": "12c1f6ac-8d60-4158-9036-de79fa274983",
    "metadata": {},
    "source": [
-    "Now that the job is complete, we’ll fetch the results and examine the responses generated for each request."
+    "Now that the job is complete, we'll fetch the results and examine the responses generated for each request."
    ]
   },
   {
