--- a/tutorials/klusterai-api/text-classification-api.ipynb
+++ b/tutorials/klusterai-api/text-classification-api.ipynb
@@ -25,31 +25,42 @@
     "id": "6d1d06ea-79c1-4f28-b312-0e5aabe18ff3"
    },
    "source": [
-    "Welcome to the text classification notebook with the <a href=\"https://kluster.ai/\" target=\"_blank\">kluster.ai</a> Batch API!\n",
-    "\n",
-    "This notebook showcases how to use the kluster.ai Batch API to classify a data set based on a predefined set of categories. In our example, we use an extract from the IMDB top 1000 movies dataset and categorize them into one of “Action”, “Adventure”, “Comedy”, “Crime”, “Documentary”, “Drama”, “Fantasy”, “Horror”, “Romance”, or “Sci-Fi”. We are using a movies dataset but you can adapt this example by using your data and categories relevant for your use case. With this approach, you can effortlessly process datasets of any scale, from small collections to extensive datasets, and obtain categorized results powered by a state-of-the-art language model.\n",
-    "\n",
-    "Simply provide your API key and run the preloaded cells to perform the classification. If you don’t have an API key, you can sign up for free <a href=\"https://platform.kluster.ai/signup\" target=\"_blank\">on our platform</a>.\n",
-    "\n",
-    "Let’s get started!\n"
+    "This tutorial runs through a Colab Notebook where you'll learn how to use the <a href=\"https://kluster.ai/\" target=\"_blank\">kluster.ai</a> Batch API to classify a data set based on a predefined set of categories. In our example, we use an extract from the IMDB top 1000 movies dataset and categorize them into \"Action,\" \"Adventure,\" \"Comedy,\" \"Crime,\" \"Documentary,\" \"Drama,\" \"Fantasy,\" \"Horror,\" \"Romance,\" or \"Sci-Fi.\" We use a movie dataset, but you can adapt this example by using your data and categories relevant to your use case. With this approach, you can effortlessly process datasets of any scale, from small collections to extensive datasets, and obtain categorized results powered by a state-of-the-art language model."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "xU1WBQJ7Uh09",
-   "metadata": {
-    "id": "xU1WBQJ7Uh09"
-   },
+   "id": "766af796",
+   "metadata": {},
+   "source": [
+    "## Prerequisites"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05ac421b",
+   "metadata": {},
+   "source": [
+    "Before getting started, ensure you have the following:\n",
+    "\n",
+    "- **A kluster.ai account** - sign up on the <a href=\"https://platform.kluster.ai/signup\" target=\"_blank\">kluster.ai platform</a> if you don't have one\n",
+    "- **A kluster.ai API key** - after signing in, go to the <a href=\"https://platform.kluster.ai/apikeys\" target=\"_blank\">**API Keys**</a> section and create a new key. For detailed instructions, check out the <a href=\"https://docs.kluster.ai/get-started/get-api-key/\" target=\"_blank\">Get an API key</a> guide"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "addf05c2",
+   "metadata": {},
    "source": [
     "## Setup"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b8d580f8-67d5-45d6-915f-0f6b60d3b543",
+   "id": "4185a24a",
    "metadata": {},
    "source": [
-    "Enter your personal kluster.ai API key (make sure it has no blank spaces). Remember to <a href=\"https://platform.kluster.ai/signup\" target=\"_blank\">sign up</a> if you don't have one yet."
+    "In this notebook, we'll use Python's `getpass` module to safely input the key. Provide your unique kluster.ai API key (ensure there are no spaces)."
    ]
   },
   {
@@ -156,7 +167,7 @@
     "id": "OyGuHllZllct"
    },
    "source": [
-    "## Batch inference"
+    "## Perform Batch inference"
    ]
   },
   {
@@ -166,12 +177,13 @@
     "id": "6-MZlfXAoiNv"
    },
    "source": [
-    "To execute the inference job, we’ll follow three straightforward steps:\n",
-    "1. **Create the inference file -** we’ll generate a file with the desired requests to be processed by the model\n",
-    "2. **Upload the inference file -** once the file is ready, we’ll upload it to the <a href=\"https://platform.kluster.ai/signup\" target=\"_blank\">kluster.ai platform</a> using the API, where it will be queued for processing\n",
-    "3. **Start the job -** after the file is uploaded, we’ll initiate the job to process the uploaded data\n",
+    "To execute the inference job, we'll follow three straightforward steps:\n",
     "\n",
-    "Everything is set up for you – just run the cells below to watch it all come together!"
+    "1. **Create the inference file** - we'll generate a file with the desired requests to be processed by the model\n",
+    "2. **Upload the inference file** - once the file is ready, we'll upload it to the <a href=\"https://platform.kluster.ai/signup\" target=\"_blank\">kluster.ai platform</a> using the API, where it will be queued for processing\n",
+    "3. **Start the job** - after the file is uploaded, we'll initiate the job to process the uploaded data\n",
+    "\n",
+    "Everything is set up for you – just run the cells below to watch it all come together."
    ]
   },
   {
@@ -191,7 +203,7 @@
     "id": "qS4JXT52wGJ-"
    },
    "source": [
-    "This example selects the `klusterai/Meta-Llama-3.3-70B-Instruct-Turbo` model. If you'd like to use a different model feel free to change the model's name in the following cell. Please refer to our <a href=\"https://docs.kluster.ai/getting-started/#list-supported-models\" target=\"_blank\">documentation</a> for a list of the models we support."
+    "This example selects the `klusterai/Meta-Llama-3.3-70B-Instruct-Turbo` model. If you'd like to use a different model, feel free to change the model's name in the following cell. Please refer to our <a href=\"https://docs.kluster.ai/getting-started/#list-supported-models\" target=\"_blank\">documentation</a> for a list of the models we support."
    ]
   },
   {
@@ -313,7 +325,7 @@
    "id": "251a0b89-71a9-40d7-bf14-51be935afe10",
    "metadata": {},
    "source": [
-    "Once the file has been successfully uploaded, we’re ready to start the inference job."
+    "Once the file has been successfully uploaded, we're ready to start the inference job."
    ]
   },
   {
@@ -347,7 +359,7 @@
     "id": "iFrDrriQqizC"
    },
    "source": [
-    "Now that the job has been created, your request is now being processed! In the following section, we’ll monitor the status of the job to see how it's progressing. Let’s take a look and keep track of it's status."
+    "Your request is being processed now that the job has been created. In the following section, we'll monitor the job's status to see how it's progressing. Let's take a look and keep track of its status."
    ]
   },
   {
@@ -422,7 +434,7 @@
    "id": "12c1f6ac-8d60-4158-9036-de79fa274983",
    "metadata": {},
    "source": [
-    "With the job completed, we’ll now retrieve the results and review the responses generated for each request."
+    "With the job completed, we'll now retrieve the results and review the responses generated for each request."
    ]
   },
   {
@@ -560,16 +572,8 @@
    "id": "7d195dd1-1293-4407-b6ad-cab7e77b14c0",
    "metadata": {},
    "source": [
-    "You’ve successfully completed the classification request using the kluster.ai Batch API! This process showcases how you can efficiently handle and classify large amounts of data with ease. The Batch API empowers you to scale your workflows seamlessly, making it an invaluable tool for processing extensive datasets."
+    "You've successfully completed the classification request using the kluster.ai Batch API! This process showcases how you can efficiently handle and classify large amounts of data with ease. The Batch API empowers you to scale your workflows seamlessly, making it an invaluable tool for processing extensive datasets."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c092343e-7672-46f4-aa27-00b3466ad210",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
