--- a/tutorials/klusterai-api/text-classification-curator.ipynb
+++ b/tutorials/klusterai-api/text-classification-curator.ipynb
@@ -27,13 +27,20 @@
     "id": "6d1d06ea-79c1-4f28-b312-0e5aabe18ff3"
    },
    "source": [
-    "Welcome to the text classification notebook with the kluster.ai Batch API!\n",
+    "This notebook showcases how to use the <a href=\"https://kluster.ai/\" target=\"_blank\">kluster.ai</a> Batch API to classify a data set based on a predefined set of categories. In our example, we use an extract from the IMDB top 1000 movies dataset and categorize them into \"Action,\" \"Adventure,\" \"Comedy,\" \"Crime,\" \"Documentary,\" \"Drama,\" \"Fantasy,\" \"Horror,\" \"Romance,\" or \"Sci-Fi.\" We use a movie dataset, but you can adapt this example by using your data and categories relevant to your use case. With this approach, you can effortlessly process datasets of any scale, from small collections to extensive datasets, and obtain categorized results powered by a state-of-the-art language model.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d0349537",
+   "metadata": {},
+   "source": [
+    "## Prerequisites\n",
     "\n",
-    "This notebook showcases how to use the <a href=\"https://kluster.ai/\" target=\"_blank\">kluster.ai</a> Batch API to classify a data set based on a predefined set of categories. In our example, we use an extract from the IMDB top 1000 movies dataset and categorize them into one of “Action”, “Adventure”, “Comedy”, “Crime”, “Documentary”, “Drama”, “Fantasy”, “Horror”, “Romance”, or “Sci-Fi”. We are using a movies dataset but you can adapt this example by using your data and categories relevant for your use case. With this approach, you can effortlessly process datasets of any scale, from small collections to extensive datasets, and obtain categorized results powered by a state-of-the-art language model.\n",
+    "Before getting started, ensure you have the following:\n",
     "\n",
-    "Simply provide your API key and run the preloaded cells to perform the classification. If you don’t have an API key, you can sign up for free <a href=\"https://platform.kluster.ai/signup\" target=\"_blank\">on our platform</a>.\n",
-    "\n",
-    "Let’s get started!\n"
+    "- **A kluster.ai account** - sign up on the <a href=\"https://platform.kluster.ai/signup\" target=\"_blank\">kluster.ai platform</a> if you don't have one\n",
+    "- **A kluster.ai API key** - after signing in, go to the <a href=\"https://platform.kluster.ai/apikeys\" target=\"_blank\">**API Keys**</a> section and create a new key. For detailed instructions, check out the <a href=\"https://docs.kluster.ai/get-started/get-api-key/\" target=\"_blank\">Get an API key</a> guide"
    ]
   },
   {
@@ -53,7 +60,7 @@
     "id": "b8d580f8-67d5-45d6-915f-0f6b60d3b543"
    },
    "source": [
-    "Enter your personal kluster.ai API key (make sure it has no blank spaces). Remember to <a href=\"https://platform.kluster.ai/signup\" target=\"_blank\">sign up</a> if you don't have one yet."
+    "In this notebook, we'll use Python's `getpass` module to safely input the key. Provide your unique kluster.ai API key (ensure there are no spaces)."
    ]
   },
   {
@@ -161,7 +168,7 @@
     "id": "OyGuHllZllct"
    },
    "source": [
-    "## Batch inference with Curator"
+    "## Perform Batch inference with Curator"
    ]
   },
   {
@@ -171,14 +178,13 @@
     "id": "64c345aa-b6a7-4770-8368-b290e9e799dc"
    },
    "source": [
-    "To execute the inference job, we’ll follow three straightforward steps:\n",
-    "1. **Create the inference file -** we’ll generate a file with the desired requests to be processed by the model.\n",
-    "2. **Upload the inference file -** once the file is ready, we’ll upload it to the kluster.ai platform using the API, where it will be queued for processing.\n",
-    "3. **Start the job -** after the file is uploaded, we’ll initiate the job to process the uploaded data.\n",
+    "To execute the inference job, we'll follow three straightforward steps:\n",
     "\n",
-    "Everything is set up for you – just run the cells below to watch it all come together!\n",
+    "1. **Create the inference file** - we'll generate a file with the desired requests to be processed by the model\n",
+    "2. **Upload the inference file** - once the file is ready, we'll upload it to the <a href=\"https://platform.kluster.ai/signup\" target=\"_blank\">kluster.ai platform</a> using the API, where it will be queued for processing\n",
+    "3. **Start the job** - after the file is uploaded, we'll initiate the job to process the uploaded data\n",
     "\n",
-    "**This is all handled automatically by Curator**"
+    "Everything is set up for you – just run the cells below to watch it all come together."
    ]
   },
   {
@@ -229,16 +235,8 @@
     "id": "7d195dd1-1293-4407-b6ad-cab7e77b14c0"
    },
    "source": [
-    "You’ve successfully completed the classification request using the kluster.ai Batch API! This process showcases how you can efficiently handle and classify large amounts of data with ease. The Batch API empowers you to scale your workflows seamlessly, making it an invaluable tool for processing extensive datasets."
+    "You've successfully completed the classification request using the kluster.ai Batch API! This process showcases how you can efficiently handle and classify large amounts of data with ease. The Batch API empowers you to scale your workflows seamlessly, making it an invaluable tool for processing extensive datasets."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "18ace97f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
