--- a/tutorials/klusterai-api/finetuning-sent-analysis.ipynb
+++ b/tutorials/klusterai-api/finetuning-sent-analysis.ipynb
@@ -329,6 +329,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c9029a4f-8cfb-4193-b14b-7507006a969d",
+   "metadata": {},
+   "source": [
+    "Next, we'll submit the job to the kluster.ai fine-tuning API. Currently, two base models are supported for fine-tuning:\n",
+    "- klusterai/Meta-Llama-3.1-8B-Instruct-Turbo\n",
+    "- klusterai/Meta-Llama-3.3-70B-Instruct-Turbo\n",
+    "\n",
+    "If you specify a different base model, the fine-tuning job will fail. You can also tweak the hyperparameters (such as number of epochs, batch size, and learning rate) to adjust training time and potential performance gains. Keep in mind that increasing the number of epochs will lead to longer training time, but may result in higher performance."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "id": "9c4bcef6-aee7-4d3e-9161-9465ac6656db",
