--- a/tutorials/klusterai-api/finetuning-sent-analysis.ipynb
+++ b/tutorials/klusterai-api/finetuning-sent-analysis.ipynb
@@ -1263,7 +1263,7 @@
    "id": "598eeeac-84dc-40eb-a64d-19ee80114bb8",
    "metadata": {},
    "source": [
-    "With LLMs it is really important to write a good prompt, including the system prompt. Below you can see our example instruction for the LLM. This is something you should experiment with and see how it changes the performance!"
+    "With LLMs, it is essential to write a good prompt, including the system prompt. Below, you can see an example instruction for the LLM. Feel free to experiment with it and see how it changes the performance!"
    ]
   },
   {
