--- a/tutorials/klusterai-api/finetuning-sent-analysis.ipynb
+++ b/tutorials/klusterai-api/finetuning-sent-analysis.ipynb
@@ -1224,7 +1224,7 @@
    "source": [
     "Congratulations! You've now created a fine-tuned model. Above, you'll see the exact name of your fine tuned model. \n",
     "\n",
-    "In the next section, you'll be submitting batch requests to your fine-tuned model. However, you can also submit one-off requests as follows (remember to provide your kluster api key and the name of your fine tuned model):\n",
+    "In the next section, you'll be submitting batch requests to your fine-tuned model. However, you can also submit one-off requests as follows (remember to provide your kluster.ai API key and the name of your fine tuned model):\n",
     "\n",
     "```bash\n",
     "curl https://api.kluster.ai/v1/chat/completions \\\n",
