--- a/tutorials/klusterai-api/finetuning-sent-analysis.ipynb
+++ b/tutorials/klusterai-api/finetuning-sent-analysis.ipynb
@@ -271,7 +271,7 @@
    "id": "8ebefac4-cb4c-4e75-af96-c827b5668188",
    "metadata": {},
    "source": [
-    "# Finetuning"
+    "# Fine-tuning"
    ]
   },
   {
