--- a/tutorials/klusterai-api/finetuning-sent-analysis.ipynb
+++ b/tutorials/klusterai-api/finetuning-sent-analysis.ipynb
@@ -136,7 +136,7 @@
         "pd.set_option('display.max_columns', 1000, 'display.width', 1000, 'display.max_rows',1000, 'display.max_colwidth', 500)\n",
         "\n",
         "# Import helper functions\n",
-        "url = \"https://raw.githubusercontent.com/albertov19/klusterai-cookbook/refs/heads/main/examples/helpers.py\"\n",
+        "url = \"https://raw.githubusercontent.com/kluster-ai/klusterai-cookbook/main/examples/helpers.py\"\n",
         "\n",
         "# Fetch the file and save it locally\n",
         "response = requests.get(url)\n",
@@ -464,7 +464,7 @@
         }
       ],
       "source": [
-        "url = \"https://github.com/albertov19/klusterai-cookbook/raw/refs/heads/main/data/financial-phrasebank.csv\"\n",
+        "url = \"https://raw.githubusercontent.com/kluster-ai/klusterai-cookbook/main/data/financial-phrasebank.csv\"\n",
         "urllib.request.urlretrieve(url,filename='financial-phrasebank.csv')\n",
         "\n",
         "# Load and process the dataset based on URL content\n",
